# svv-ifc-profiler

./: .env.example  .gitignore  README.md  dev.ps1  pyproject.toml  requirements.txt
docs/: architecture.md  index.html
samples/: FV229_Senterlinje.xml  UEH-32-A-55075_05 Vei Kleverud_IFC.prj  m_f_veg_70400_aligment.xml
src/api/: auth_routes.py  job_runner.py  server.py
src/arcpy_processor/: __init__.py  _polyline_publisher.py  auth.py  bim_to_agol.py  converter.py  errors.py  experience_builder.py  ifc_cl_to_agol.py  landxml_parser.py  landxml_to_agol.py  publisher.py  tverrprofil_to_agol.py
src/ifc_processor/: __init__.py  alignment_parser.py  bim_classifier.py  centerline.py  cross_section.py  georef.py  ifc_reader.py  longitudinal_profile.py  normal_section.py  pipeline.py  renderer.py  terrain_sampler.py
tests/: test_alignment_parser.py  test_api_auth.py  test_api_jobs.py  test_arcpy_auth.py  test_arcpy_cli.py  test_arcpy_converter.py  test_arcpy_publisher.py  test_auth_connect.py  test_bim_classifier.py  test_bim_converter.py  test_bim_to_agol.py  test_centerline.py  test_cross_section.py  test_experience_builder.py  test_ifc_cl_to_agol.py  test_ifc_reader.py  test_landxml_parser.py  test_landxml_to_agol.py  test_longitudinal_profile.py  test_normal_section.py  test_pipeline.py  test_pipeline_stations_json.py  test_polyline_publisher.py  test_renderer.py  test_smoke.py  test_tverrprofil_to_agol.py
web/: index.html  job.html  package-lock.json  package.json  profilutforsker.html  vite.config.js
web/src/: job.js  main.js
(+34 files in other folders)
